--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
     "@angular-devkit/build-angular": "^18.1.1",
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.0",
+    "@pact-foundation/pact": "^13.1.3",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.13",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^14.2.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.5.2"
   }
 }
